--- a/styles/discussion.css
+++ b/styles/discussion.css
@@ -240,17 +240,13 @@ textarea:focus {
 
 button {
     padding: 10px;
-    background-color: #3a1768;
-    color: white;
     border: none;
     border-radius: 5px;
-    font-size: 1.2em;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 button:hover {
-    background-color: #6a2a88;
 }
 
 /* Footer */
@@ -344,8 +340,6 @@ footer p {
 
 /* Styles pour le bouton de suppression */
 .btn-delete {
-    background-color: #ff0000; /* Rouge */
-    color: white;
     border: none;
     border-radius: 5px;
     padding: 10px 20px;
@@ -353,7 +347,7 @@ footer p {
 }
 
 .btn-delete:hover {
-    background-color: #cc0000; /* Rouge plus foncé au survol */
+    color: #cc0000; /* Rouge plus foncé au survol */
 }
 
 
@@ -377,22 +371,12 @@ footer p {
     box-sizing: border-box; /* Prendre en compte les paddings dans la largeur totale */
 }
 
-/* Bouton pour modifier */
-.boutons-container .btn-modify {
-    background-color: #3a1768; /* Violet */
-}
-
 .boutons-container .btn-modify:hover {
-    background-color: #6a2a88; /* Violet plus clair au survol */
-}
-
-/* Bouton pour supprimer */
-.boutons-container .btn-delete {
-    background-color: #ff0000; /* Rouge */
+    color: #6a2a88; /* Violet plus clair au survol */
 }
 
 .boutons-container .btn-delete:hover {
-    background-color: #cc0000; /* Rouge plus foncé au survol */
+    color: #cc0000; /* Rouge plus foncé au survol */
 }
 
 /* Styles pour la barre de navigation */
