--- a/styles/discussion.css
+++ b/styles/discussion.css
@@ -507,6 +507,8 @@ nav ul li a.active {
 }
 
 .commentaire-body {
+    width: 5em;
+    height: 5em;
     display: flex;
     justify-content: space-between;
     align-items: center;
