style: enhance button styles and layout for improved user experience

--- a/styles/discussion.css
+++ b/styles/discussion.css
@@ -219,9 +219,11 @@ input[type="email"],
 input[type="password"],
 select,
 textarea {
+    width: 100%; /* Prend toute la largeur disponible */
     padding: 12px;
     border-radius: 5px;
     border: 1px solid #ccc;
+    font-size: 1em;
     box-sizing: border-box;
     transition: border-color 0.3s ease;
 }
@@ -238,10 +240,17 @@ textarea:focus {
 
 button {
     padding: 10px;
+    background-color: #3a1768;
+    color: white;
     border: none;
     border-radius: 5px;
+    font-size: 1.2em;
     cursor: pointer;
     transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #6a2a88;
 }
 
 /* Footer */
@@ -335,6 +344,8 @@ footer p {
 
 /* Styles pour le bouton de suppression */
 .btn-delete {
+    background-color: #ff0000; /* Rouge */
+    color: white;
     border: none;
     border-radius: 5px;
     padding: 10px 20px;
@@ -342,7 +353,7 @@ footer p {
 }
 
 .btn-delete:hover {
-    color: #cc0000; /* Rouge plus foncé au survol */
+    background-color: #cc0000; /* Rouge plus foncé au survol */
 }
 
 
@@ -366,12 +377,22 @@ footer p {
     box-sizing: border-box; /* Prendre en compte les paddings dans la largeur totale */
 }
 
+/* Bouton pour modifier */
+.boutons-container .btn-modify {
+    background-color: #3a1768; /* Violet */
+}
+
 .boutons-container .btn-modify:hover {
-    color: #6a2a88; /* Violet plus clair au survol */
+    background-color: #6a2a88; /* Violet plus clair au survol */
+}
+
+/* Bouton pour supprimer */
+.boutons-container .btn-delete {
+    background-color: #ff0000; /* Rouge */
 }
 
 .boutons-container .btn-delete:hover {
-    color: #cc0000; /* Rouge plus foncé au survol */
+    background-color: #cc0000; /* Rouge plus foncé au survol */
 }
 
 /* Styles pour la barre de navigation */
@@ -507,8 +528,6 @@ nav ul li a.active {
 }
 
 .commentaire-body {
-    width: 5em;
-    height: 5em;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -526,8 +545,8 @@ nav ul li a.active {
 }
 
 .commentaire-footer button {
-    width: 5em;
-    height: 5em;
+    background-color: #3a1768;
+    color: white;
     border: none;
     border-radius: 5px;
     padding: 5px 10px;
@@ -536,19 +555,16 @@ nav ul li a.active {
 }
 
 .commentaire-footer button:hover {
-    width: 5em;
-    height: 5em;
+    background-color: #6a2a88;
 }
 
 .commentaire-signalement {
-    width: 5em;
-    height: 5em;
     text-align: right;
 }
 
 .commentaire-signalement button {
-    width: 5em;
-    height: 5em;
+    background-color: #ff0000;
+    color: white;
     border: none;
     border-radius: 5px;
     padding: 5px 10px;
@@ -557,6 +573,5 @@ nav ul li a.active {
 }
 
 .commentaire-signalement button:hover {
-    width: 5em; 
-    height: 5em;
+    background-color: #cc0000;
 }
